# breakpoint

./: README.md
breakpoint/: .gitignore  .metadata  README.md  pubspec.yaml
breakpoint/android/app/: build.gradle
breakpoint/ios/Runner/: Info.plist
breakpoint/ios/Runner.xcodeproj/: project.pbxproj
breakpoint/lib/: defaults.dart  main.dart  results_page.dart  util.dart
breakpoint/lib/blocs/simulation_bloc/: bloc.dart  simulation_bloc.dart  simulation_event.dart  simulation_state.dart  simulation_worker.dart
breakpoint/lib/models/: focus_node.dart  models.dart  parameters.dart  results.dart  scenario.dart  theme.dart  time_unit.dart
breakpoint/lib/screens/: home_page.dart  results_page.dart
breakpoint/lib/widgets/: page_indicator.dart
breakpoint/lib/widgets/input/: dynamic_text.dart  input.dart  run_simulation_button.dart  (+4 more)
breakpoint/test/: widget_test.dart
docs/: index.html
native_sim/: .metadata  README.md  pubspec.yaml
native_sim/android/: CMakeLists.txt  build.gradle  settings.gradle
native_sim/android/src/main/: AndroidManifest.xml
native_sim/android/src/main/kotlin/com/humbleme/native_sim/: NativeSimPlugin.kt
native_sim/example/: .flutter-plugins-dependencies  README.md  log.txt  pubspec.yaml
native_sim/example/lib/: breakpoint.dart  main.dart
native_sim/example/test/: widget_test.dart
native_sim/ios/: native_sim.podspec
native_sim/ios/Classes/: NativeSimPlugin.h  NativeSimPlugin.m  SwiftNativeSimPlugin.swift  native_sim.cpp  native_sim.h
native_sim/lib/: native_sim.dart
native_sim/test/: native_sim_test.dart
(+22 files in other folders)
